<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.imaginers.tonmo.fineweather.fragments.WeatherConditionFragment"
    android:weightSum="3">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/condition_icon"
        app:srcCompat="@drawable/icon_na"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/day"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/highTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:text="@string/high"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lowTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>